--- a/test tugas web design web/index.html
+++ b/test tugas web design web/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tugas Web</title>
+    <title>Karya Nusantara</title>
     <style>
        
         * {
@@ -138,7 +138,7 @@
     
     <div class="banner">
         <h2>What are you working on?</h2>
-        <p>Kevin ganteng is where designers get inspired and hired.</p>
+        <p>Karya Nusantara adalah website dimana kamu bisa mendapatkan inspirasi batik yang sangat bagus.</p>
         <button>Continue</button>
     </div>
 
@@ -150,53 +150,53 @@
         <div class="grid">
             <div class="card">
                 <img src="Balinese-Batik-850x636.jpg">
-                <h3>Batik solo</h3>
+                <h3>Batik Bali</h3>
                 <p>4,802 views • 366 likes</p>
             </div>
             <div class="card">
                 <img src="batik-pekalongan1.jpg">
-                <h3>Robinhood</h3>
+                <h3>Batik pekalongan</h3>
                 <p>2,995 views • 396 likes</p>
             </div>
             <div class="card">
                 <img src="Batik-Mega-Mendung.webp">
-                <h3>Fireart Studio</h3>
+                <h3>Batik mega mendung</h3>
                 <p>3,212 views • 338 likes</p>
             </div>
             <div class="card">
                 <img src="Kawung-Batik-Motif-Central-Java-Gypsied_1024x1024.webp">
-                <h3>Zhenya Rynzhuk</h3>
+                <h3>Batik kawung</h3>
                 <p>4,659 views • 344 likes</p>
             </div>
             <div class="card">
                 <img src="batik 3.jpg">
-                <h3>Studio XYZ</h3>
+                <h3>Batik pesisir</h3>
                 <p>5,000 views • 420 likes</p>
             </div>
             <div class="card">
                 <img src="th.jpg">
-                <h3>Creative Hub</h3>
-                <p>3,850 views • 290 likes</p>
+                <h3>Batik Jawa</h3>
+                <p>8,850 views • 900 likes</p>
             </div>
             <div class="card">
                 <img src="th (1).jpg">
-                <h3>Artify Studio</h3>
+                <h3>Batik Madura</h3>
                 <p>2,700 views • 250 likes</p>
             </div>
             <div class="card">
-                <img src="th (3).jpg">
-                <h3>Pixel Perfect</h3>
+                <img src="batiik.jpg">
+                <h3>Batik Lasem</h3>
                 <p>6,100 views • 500 likes</p>
             </div>
             <div class="card">
                 <img src="th (2).jpg">
-                <h3>Nordie</h3>
-                <p>4,802 views • 366 likes</p>
+                <h3>Batik bekasi</h3>
+                <p>4,990 views • 379 likes</p>
             </div>
             <div class="card">
                 <img src="vector-batik-26.jpg.crdownload">
-                <h3>Artify Studio</h3>
-                <p>2,700 views • 250 likes</p>
+                <h3>Batik ideas</h3>
+                <p>2,300 views • 257 likes</p>
             </div>
         </div>
     </div>
